# masareef

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RELEASING.md
.cache/clangd/index/: addexpensedialog.cpp.7833E714FA09E2B9.idx  addexpensedialog.h.8845DC38A251200E.idx  appconfig.cpp.7B6953EFC700C8D7.idx  appconfig.h.7570D4BBC04F283F.idx  backupmanager.cpp.EB1CEF9B67332C2A.idx  backupmanager.h.4E12E23E97000137.idx  categorymodel.cpp.21A47C4E8B42C5A9.idx  categorymodel.h.FCD648EBF40EE28F.idx  chartswidget.cpp.5085728890BDD067.idx  chartswidget.h.C4EDD14A0DEAB35A.idx  currencyformatter.cpp.2F6D274B9753C7CD.idx  currencyformatter.h.7C0E1552D77311BA.idx  dashboardwidget.cpp.A932692A572733DB.idx  dashboardwidget.h.ACF6FDB168CBEB3E.idx  databasemanager.cpp.154C62D6AE7D13EF.idx  databasemanager.h.60AB577E91501A84.idx  expenselistwidget.cpp.59B81B0A8DEAAB8C.idx  expenselistwidget.h.31F6C44D2820C8D2.idx  expensemodel.cpp.A851FF92658BDB2E.idx  expensemodel.h.511A54ED74BC4BE4.idx  main.cpp.D18D5DFBC5B58F50.idx  mainwindow.cpp.8E5971EF2BA6C1DF.idx  mainwindow.h.C831462CB80324FC.idx  managecategoriesdialog.cpp.56C6471313D2F041.idx  managecategoriesdialog.h.A93EE88921DE1AF6.idx  palette.h.5994765361CD7E93.idx  recurringbillmodel.cpp.364DD0146896D204.idx  recurringbillmodel.h.5BAB4A46441E016C.idx  recurringbillsdialog.cpp.3639D9F282FDBBD3.idx  recurringbillsdialog.h.712F77DE20794B55.idx  reminderswidget.cpp.A295989FEA570E67.idx  reminderswidget.h.E84D427D1BE77771.idx  settingsdialog.cpp.E863B1B430C613B7.idx  settingsdialog.h.4B0E15DF6DDFAF55.idx  testutils.h.4A96FAA178FFB463.idx  tst_backupmanager.cpp.1EE2676A32D2677F.idx  tst_categorymodel.cpp.EC66DC559CB2836C.idx  tst_currencyformatter.cpp.130AB3EE7FBC8ABC.idx  tst_databasemanager.cpp.2B9D9B8169C54440.idx  tst_expensemodel.cpp.EF9679F974233E15.idx  (+1 more)
.github/workflows/: ci.yml  release.yml
packaging/: README.md  build-windows.ps1
packaging/linux/: masareef.desktop
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: money.h  recurrence.cpp  recurrence.h  result.h
src/db/: databasemanager.cpp  databasemanager.h
src/dialogs/: addexpensedialog.cpp  addexpensedialog.h  budgetdialog.cpp  budgetdialog.h  managecategoriesdialog.cpp  managecategoriesdialog.h  recurringbillsdialog.cpp  recurringbillsdialog.h  settingsdialog.cpp  settingsdialog.h
src/mobile/: CMakeLists.txt  main.cpp  qtquickcontrols2.conf
src/mobile/android/: AndroidManifest.xml
src/mobile/android/res/values/: ic_launcher_background.xml
src/mobile/android/res/values-ar/: strings.xml
src/mobile/backend/: appbackend.cpp  appbackend.h  billcontroller.cpp  billcontroller.h  billlistmodel.cpp  billlistmodel.h  budgetviewmodel.cpp  budgetviewmodel.h  categorylistmodel.cpp  categorylistmodel.h  dashboardviewmodel.cpp  dashboardviewmodel.h  expensecontroller.cpp  expensecontroller.h  expenselistmodel.cpp  expenselistmodel.h  reportsviewmodel.cpp  reportsviewmodel.h  themecontroller.cpp  themecontroller.h
src/mobile/i18n/: masareef_ar.ts
src/mobile/qml/: Main.qml  Theme.qml
src/mobile/qml/components/: AmountField.qml  BudgetGauge.qml  CategoryPicker.qml  DateField.qml  EmptyState.qml  ExpenseDelegate.qml  ExpenseForm.qml  NavBar.qml  Snackbar.qml  StatCard.qml
src/mobile/qml/screens/: BillsScreen.qml  BudgetsScreen.qml  CategoryManagerScreen.qml  ExpensesScreen.qml  HomeScreen.qml  ReportsScreen.qml  SettingsScreen.qml
src/mobile/qml/sheets/: AddBillSheet.qml  AddExpenseSheet.qml  EditBillSheet.qml  EditExpenseSheet.qml
src/models/: categorymodel.cpp  categorymodel.h  expensemodel.cpp  expensemodel.h  recurringbillmodel.cpp  recurringbillmodel.h
src/storage/: billrepository.cpp  billrepository.h  budgetrepository.cpp  budgetrepository.h  categoryrepository.cpp  categoryrepository.h  expenserepository.cpp  expenserepository.h
src/utils/: appconfig.cpp  appconfig.h  backupmanager.cpp  backupmanager.h  currencyformatter.cpp  currencyformatter.h  palette.cpp  palette.h  theme.cpp  theme.h
src/widgets/: chartswidget.cpp  chartswidget.h  dashboardwidget.cpp  dashboardwidget.h  expenselistwidget.cpp  expenselistwidget.h  reminderswidget.cpp  reminderswidget.h
tests/: CMakeLists.txt  testutils.h  tst_appconfig.cpp  tst_backupmanager.cpp  tst_billrepository.cpp  tst_budgetrepository.cpp  tst_categorymodel.cpp  tst_categoryrepository.cpp  tst_currencyformatter.cpp  tst_databasemanager.cpp  tst_expensemodel.cpp  tst_expenserepository.cpp  tst_recurrence.cpp  tst_recurringbillmodel.cpp
tests/mobile/: CMakeLists.txt  tst_appbackend.cpp  tst_billcontroller.cpp  tst_billlistmodel.cpp  tst_budgetviewmodel.cpp  tst_categorylistmodel.cpp  tst_dashboardviewmodel.cpp  tst_expensecontroller.cpp  tst_expenselistmodel.cpp  tst_reportsviewmodel.cpp  tst_themecontroller.cpp
tests/mobile/qml/: tst_addexpense.qml  tst_bills.qml  tst_categorymanager.qml  tst_expenselist.qml  tst_navigation.qml  tst_qml_main.cpp  tst_reports.qml
